# python-ml-pipeline

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
api/: serving.py
examples/: demo.py  quickstart.py
pipeline/: __init__.py  evaluation.py  features.py  ingestion.py  orchestrator.py  training.py
