[project]
name = "ml-pipeline"
version = "1.0.0"
description = "Production ML pipeline — data ingestion, feature engineering, model training, evaluation, serving via FastAPI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "scikit-learn>=1.5.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pydantic>=2.7.0",
    "joblib>=1.4.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "httpx>=0.27.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
